--- a/pages/style.css
+++ b/pages/style.css
@@ -1,7 +1,7 @@
 .container {
     width: 100vh;
     height: 100vh;
-    border: 3px solid blue;
+    border: 10px solid black;
 }
 
 .box {
@@ -9,4 +9,5 @@
     height: 10rem;
     background-color: red;
     margin: 5px;
+    border: 5px dotted lightseagreen;
 }
